fixed social alignment

--- a/css/main.css
+++ b/css/main.css
@@ -435,15 +435,6 @@ input[type=button] {
   align-items: center;
   flex-flow: row wrap;
 }
-  
-
-
-.contact {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-flow: row wrap;
-}
 
 .contact-content p {
   margin: 0;
